--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "author": "Sudhi Jagadeeshi",
   "license": "MIT",
+  "engines": {
+    "node": "16.14.2",
+    "npm": "8.1.0"
+  },
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.10",
-    "nodemon": "^2.0.15"
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^6.3.0",
+    "nodemon": "^2.0.16"
   }
 }
